--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,10 +34,12 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Culminating
 excludes=
 file.reference.core.jar=C:\\Users\\342468766\\Downloads\\core.jar
+file.reference.core.jar-1=/Users/MPEH/Downloads/core.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.core.jar}
+    ${file.reference.core.jar}:\
+    ${file.reference.core.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
